- edit-urpm-sources:
  o add media even if one failed instead of rollbacking all of them
    (regression introduced in urpmi-6.19)
  o fix displayling big list of media to remove (#46773)
- MandrivaUpdate:
  o use new proper API to select media, thus fixing not updating media
    (side effect of urpmi API changes, #47209)
- rpmdrake:
  o update GUI package list

Version 5.5 - 9 December 2008, Thierry Vignaud

- rpmdrake:
  o searching:
    * fix a rare crash on searching (#46225)
    * only look at name, not at full name (n-e-v-r) when performing
      search in names (#45410)
    * scroll group list to search category
  o update GUI package list

Version 5.4 - 24 November 2008, Thierry Vignaud

- edit-urpm-sources:
  o do not drop 'ignore' flag when updating a medium (#44930)
  o fix displaying type of altered mirrorlist media (#44930)
- rpmdrake:
  o list plasma applets in GUI package list too (#45835)
  o update GUI package list

Version 5.3 - 17 November 2008, Thierry Vignaud

- drop diagnostics, strict, vars and warnings pragmas (should help #45361)
- edit_urpm_sources:
  o make clearer than DVD, CD-ROM are removable devices (#30842)
  o prevent enabling one to tag media as update media when adding
    whole distro media
- rpmdrake:
  o update GUI package list

Version 5.2.1 - 6 October 2008, Thierry Vignaud

- fix displaying big list of conflicting packages
- fix loading options from chrooted config file
- rpmdrake:
  o update GUI package list

Version 5.2 - 16 October 2008, Thierry Vignaud

- better looking messages when downloading files
- do not read big debug media if 'ignore_debug_media' option is set
- try harder not to have gray wait message dialogs
  (needs drakxtools > 11.67)
- when using --env:
  o do not write chrooted .rpmdrake config file on exit
  o open the chrooted .rpmdrake config file
- gurpmi.addmedia:
  o fix return value when canceling
- rpmdrake:
  o enable to set 'noclean' option (#13522)

Version 5.1 - 10 October 2008, Thierry Vignaud
