@@ -2,6 +2,8 @@
   o add media even if one failed instead of rollbacking all of them
     (regression introduced in urpmi-6.19)
   o fix displayling big list of media to remove (#46773)
+  o fix media selection dialog layout so that dialog behaves smoothly
+    on resizing (#47271)
 - MandrivaUpdate:
   o use new proper API to select media, thus fixing not updating media
     (side effect of urpmi API changes, #47209)
